# medical-3d-imaging-viewer

./: README.md
.cursor/rules/: cornerstonejs.mdc  pinia.mdc  vue-router.mdc  vue3.mdc
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: orthanc.py
backend/app/core/: camera.py  carm.py  config.py  constant.py  coordinate.py  dicom.py  intensity_transform.py  orthanc.py  slicer_parser.py  vtk_utils.py
backend/app/schemas/: label.py
frontend/: eslint.config.ts  index.html  package.json  vite.config.ts
frontend/local/: README.md  dicom_loader.py  main.py  vtk_image_creator.py  vtk_renderer.py  vtk_visualization.py
frontend/src/: App.vue
frontend/src/components/: AngioView.vue  CornerstoneMultiFrame.vue  MedicalHierarchyView.vue  MultiViewRenderer.vue  OrthogonalViewer.vue  VTKCanvas.vue  VisualizationList.vue
frontend/src/composables/: useVTKInteractor.ts
frontend/src/helpers/: orthancApi.ts
frontend/src/helpers/cornerstone/: addButtonToToolbar.ts  convertMultiframeImageIds.js  createElement.ts  htmlSetup.ts  index.d.ts  index.js  initProviders.js  initVolumeLoader.js  setCtTransferFunctionForVolumeActor.js  uids.d.ts
frontend/src/services/: orthancService.ts  visualizationService.ts  vtkViewerService.ts
frontend/src/stores/: medicalData.ts  renderedItems.ts
frontend/src/types/: cornerstonejs.d.ts
frontend/web/: README.md  eslint.config.ts  package.json  vite.config.ts
frontend/web/src/: App.vue
frontend/web/src/assets/: base.css
frontend/web/src/components/: CPRViewport.vue  MPRViewport.vue  MultiframeControls.vue  MultiframeViewer.vue  PatientStudySeriesSelector.vue  SeriesSelector.vue  SidePanel.vue  VTKCanvas.vue  VolumeControls.vue  VolumeViewer.vue
frontend/web/src/composables/: useControlPanelState.ts  useVTKInteractor.ts  (+1 more)
(+10 files in other folders)
